# cs5330

./: .gitignore  README.md
content_based_image_retrieval/: CMakeLists.txt  content_based_image_retrieval.sln  readme.txt
content_based_image_retrieval/content_based_image_retrieval/: content_based_image_retrieval.vcxproj
content_based_image_retrieval/data/olympus/: baseline_features  text_hist_features
content_based_image_retrieval/include/: matching_helpers.h
content_based_image_retrieval/src/: get_dir_feat.cpp  get_top_n_matches.cpp
real_time_filtering/: CMakeLists.txt  readme.txt
real_time_filtering/src/: CMakeCache.txt  filter.cpp  imgDisplay.cpp  vidDisplay.cpp
sampleCode/: sampleCode.cpp
